corrected alignment of octopus' glasses and hat for DBC assignment

--- a/css/positioning/myStyleSheet.css
+++ b/css/positioning/myStyleSheet.css
@@ -6,18 +6,20 @@
 #octopus {
 	display: block;
 	margin: auto;
+
 }
 
 #glasses{
 	display: block;
-	margin-left: 440px;
+	margin: auto;
 	position: relative;
-	margin-top: -190px;
+	margin-top: -189px;
+	position: relative;
 }
 
 #hat {
 	display: block;
-	margin-left: 370px;
+	margin: auto;
+	margin-top: -220px;
 	position: relative;
-	margin-top: -230px;
 }
